--- a/ChainLink-Client/src/styles/components/ride-feed-card.css
+++ b/ChainLink-Client/src/styles/components/ride-feed-card.css
@@ -189,6 +189,45 @@
     margin-top: 12px;
 }
 
+.ride-card-users-container {
+    padding-top: 12px;
+    width: 100%;
+    height: 170px;
+    overflow-y: auto;
+}
+
+.ride-card-users {
+    padding-top: 8px;
+    padding-left: 8px;
+    padding-bottom: 8px;
+    justify-content: flex-start;
+    display: flex;
+    align-items: center;
+    overflow-y: auto;
+    border: 1px solid var(--dark-color);
+    border-radius: 12px;
+    margin-bottom: 4px;
+}
+
+.ride-card-users > .image {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    border: 2px solid var(--dark-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    color: white;
+    position: relative;
+}
+
+.ride-card-users > .name {
+    padding-left: 10px;
+    text-align: left;
+    font-size: 17px;
+}
 
 .rode-card-close-modal {
     position: absolute;
