add pointer when hovering over user in rider list

--- a/ChainLink-Client/src/styles/components/ride-feed-card.css
+++ b/ChainLink-Client/src/styles/components/ride-feed-card.css
@@ -207,6 +207,7 @@
     border: 1px solid var(--dark-color);
     border-radius: 12px;
     margin-bottom: 4px;
+    cursor: pointer;
 }
 
 .ride-card-users > .image {
