--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -140,7 +140,7 @@
 
 /* Upcoming rides */
 
-.profile-page-user-upcoming-rides, .profile-page-user-past-rides {
+.profile-page-user-upcoming-rides, .profile-page-user-past-rides, .profile-page-friends-container {
     background-color: white;
     padding: 24px;
     border-radius: 12px;
@@ -149,12 +149,12 @@
     border: 0.5px solid rgba(14, 30, 37, 0.12);
     margin-bottom: 80px;
 }
-.profile-page-user-upcoming-rides-data, .profile-page-user-past-rides-data {
+.profile-page-user-upcoming-rides-data, .profile-page-user-past-rides-data, .profile-page-list-container {
     display: flex;
     gap: 24px;
 }
 
-.profile-page-user-rides-hosted, .profile-page-user-rides-joined {
+.profile-page-user-rides-hosted, .profile-page-user-rides-joined, .profile-page-list-display {
     flex-grow: 1;
     
 }
@@ -169,7 +169,7 @@
     padding: 12px;
     border: 0.5px solid rgba(209, 215, 221, 1);
 }
-.profile-page-user-rides-list-item {
+.profile-page-user-rides-list-item, .profile-page-friend-list-item {
     padding: 12px;
     border: 0.5px solid rgba(209, 215, 221, 1);
     transition: 0.2s ease-in-out all;
@@ -218,9 +218,94 @@
 }
 
 
+/* User List (Shamelessly Copied From 'ride-feed-card.css') */
 
+.profile-page-friend-list-item {
+    padding-top: 8px;
+    padding-left: 8px;
+    padding-bottom: 8px;
+    justify-content: flex-start;
+    display: flex;
+    align-items: center;
+    overflow-y: auto;
+    border: 1px solid var(--dark-color);
+    border-radius: 12px;
+    margin: 2px;
+    min-height: 70px;
+}
 
+.profile-page-friend-list-item > .image {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    border: 2px solid var(--dark-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    color: white;
+    position: relative;
+}
 
+.profile-page-friend-list-item > .name {
+    padding-left: 10px;
+    text-align: left;
+    font-size: 17px;
+}
+
+.profile-page-friend-list-tab {
+    margin: 0px;
+    border: 1px solid var(--dark-color);
+    border-radius: 5px 5px 0px 0px;
+    padding: 5px 7px;
+    background-color: white;
+    font-size: 18px;
+}
+
+.profile-page-friend-list-tab:hover {
+    cursor: pointer;
+}
+
+.profile-page-friend-list {
+    border: 1px solid var(--dark-color);
+    display: block;
+}
+
+.profile-page-friend-request-button-container {
+    float: right;
+    max-width: 100%;
+    flex-basis: 0.1;
+    margin-left: auto;
+    
+}
+
+.profile-page-friend-request-reject-button {
+    border-radius: 50%;
+    border: 2px solid red;
+    color: red;
+    margin: 5px;
+    padding: 0px 10px;
+    aspect-ratio: 1;
+    text-align: center;
+    font-size: 24px;
+}
+
+.profile-page-friend-request-accept-button {
+    border-radius: 50%;
+    border: 2px solid green;
+    color: green;
+    margin: 0px;
+    padding: 0px 10px;
+    aspect-ratio: 1;
+    text-align: center;
+    font-size: 24px;
+    margin-left: 5px;
+}
+
+.profile-page-friend-request-reject-button:hover, .profile-page-friend-request-accept-button:hover {
+    cursor: pointer;
+}
 /* Popover */
 
 .profile-page-popover-ride-details-container {
