--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -261,11 +261,12 @@
 
 .profile-page-friend-list-tab {
     margin: 0px;
-    border: 1px solid var(--dark-color);
+    border: 0.5px solid rgba(209, 215, 221, 1);
     border-radius: 5px 5px 0px 0px;
     padding: 5px 7px;
     background-color: white;
     font-size: 18px;
+    float: left;
 }
 
 .profile-page-friend-list-tab:hover {
@@ -273,8 +274,26 @@
 }
 
 .profile-page-friend-list {
-    border: 1px solid var(--dark-color);
+    border: 0.5px solid rgba(209, 215, 221, 1);
     display: block;
+    width: 100%;
+    float: left;
+    flex-grow: 1;
+}
+
+.profile-page-friend-panel-display {
+    border: 0.5px solid rgba(209, 215, 221, 1);
+    display: block;
+    width: 100%;
+    float: right;
+    flex-grow: 1;
+}
+
+.profile-page-list-panel-display {
+    width: 100%;
+    display: flex;
+    float: left;
+    gap: 24px;
 }
 
 .profile-page-friend-request-button-container {
@@ -351,11 +370,119 @@
     cursor: pointer;
 }
 
+/* Based On Profile Modal Style */
 
+.profile-page-panel-name {
+    height: 18px;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    display: inline-block;
+}
 
+.profile-page-panel-name-big {
+    height: 22px;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+}
 
+.profile-page-panel-header {
+    display: block;
+    width: 100%;
+}
 
+.profile-page-panel-content {
+    display: flex;
+    width: 100%;
+    margin: 4px 0px;
+}
 
+.profile-page-panel-name-container {
+    height: 60px;
+    width: 75%;
+    display: block;
+    flex-direction: column;
+    padding: 0px;
+    margin: 20px 2.5% 0px 2.5%;
+    float: right;
+}
+
+.profile-page-panel-image {
+    background-color: var(--primary-color);
+    border-radius: 50%;
+    border: 2px solid var(--dark-color);
+    color: white;
+    width: 15%;
+    aspect-ratio: 1;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0% 0px 5%;
+    padding: 0px;
+    font-size: 48px;
+}
+
+.profile-page-panel-descriptor-left {
+    height: 20px;
+    /*flex-basis: 50%;*/
+    margin: 2px 5px;
+    text-align: center;
+    width: 15%;
+    margin-left: 5%;
+}
+
+.profile-page-panel-descriptor-right {
+    height: 20px;
+    width: 75%;
+    margin: 2px 5px;
+    float: right;
+    text-align: right;
+}
+
+.profile-page-panel-reject-button {
+    border-radius: 2%;
+    border: 2px solid red;
+    color: red;
+    margin: 5px;
+    margin-left: 15%;
+    padding: 0px 10px;
+    text-align: center;
+    font-size: 18px;
+    vertical-align: middle;
+    width: 30%;
+    height: 50px;
+}
+
+.profile-page-panel-accept-button {
+    border-radius: 2%;
+    border: 2px solid green;
+    color: green;
+    margin: 5px;
+    padding: 0px 10px;
+    text-align: center;
+    font-size: 18px;
+    margin-left: 10%;
+    vertical-align: middle;
+    width: 30%;
+    height: 50px;
+}
+
+.profile-page-panel-buttons {
+    width: 100%;
+    position: absolute;
+    bottom: 10px;
+}
+
+.profile-page-panel {
+    display: block;
+    position: relative;
+    /*width: 100%;*/
+    height: 600px;
+
+}
 
 @media only screen and (max-width: 800px) {
 
@@ -385,5 +512,10 @@
     .profile-page-user-rides-hosted, .profile-page-user-rides-joined {
         width: 100%;
     }
-    
+
+    /*
+    .profile-page-friend-panel-display, .profile-page-friend-list {
+        width: 100%;
+    }
+    */
 }
