various minor UI things

--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -237,6 +237,7 @@
     border-radius: 12px;
     margin: 2px;
     min-height: 70px;
+    cursor: pointer;
 }
 
 .profile-page-friend-list-item > .image {
