--- a/ChainLink-Client/src/index.css
+++ b/ChainLink-Client/src/index.css
@@ -66,6 +66,10 @@ input[type="range"]:focus {
     color: rgb(244, 67, 54);
 }
 
+button {
+    cursor: pointer;
+}
+
 @font-face {
     font-family: "Khyay";
     src: url("./assets/Khyay-Regular.ttf") format("truetype");
