share rides ready for review, commented out share icon for now due to css issue

--- a/ChainLink-Client/src/styles/components/ride-feed-card.css
+++ b/ChainLink-Client/src/styles/components/ride-feed-card.css
@@ -248,6 +248,9 @@
     cursor: pointer;
     color: rgba(0, 0, 0, 0.381);
 }
+.share-icon {
+    cursor: pointer;
+}
 
 
 @media only screen and (max-width: 900px) {
