--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -24,11 +24,11 @@
 .profile-page-user-info::after {
     content: '';
     position: absolute;
-    width: 80%;
+    width: 100%;
     height: 0.5px;
     background-color: rgba(0, 0, 0, 0.342);
     bottom: -40px;
-    left: 10%;
+    /* left: 10%; */
 }
 
 .profile-page-user-info .user-image img,
@@ -94,10 +94,6 @@
     padding-left: 5px;
 }
 
-
-
-
-
 .profile-page-user-stats {
     margin-top: 24px;
     background-color: white;
@@ -106,29 +102,110 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
+.profile-page-tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.profile-page-tooltip .tooltip-text {
+    visibility: hidden;
+    width: 200px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 120%;
+    left: 50%;
+    margin-left: -100px;
+}
+
+.profile-page-tooltip:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
 .profile-page-user-stats-data {
     padding: 24px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 12px;
-    
     flex-grow: 1;
 }
-.profile-page-user-stats-data > div {
-    
+
+.profile-page-user-stats-data > hr {
+    border: none;
+    height: .5px;
+    width: 90%;
+    background-color:rgba(0, 0, 0, 0.4);
+    margin-top: 40px;
+}
+
+.profile-page-user-stats-data-row-1 {
     padding: 12px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    /* gap: 12px; */
+    border-radius: 12px;
+    /* background-color: #e4e4e4; */
+}
+
+.profile-page-user-stats-data-row-1 > div {
+    
+    /* padding: 50px; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 12px;
+    /* gap: 12px; */
     border-radius: 12px;
 }
-.profile-page-user-stats-data > div > div:first-child {
+
+.profile-page-user-stats-data-row-1 > div > div:first-child {
     font-weight: 600;
     font-size: 0.8em;
+    padding-bottom: 10px;
+    word-spacing: 3px;
 }
-.profile-page-user-stats-data > div > div:last-child {
+
+.profile-page-user-stats-data-row-1 > div > div:last-child {
+    font-weight: 200;
+    font-size: 1.6em;
+    opacity: 0.6;
+}
+
+.profile-page-user-stats-data-row-2 {
+    padding: 12px;
+    display: grid;
+    grid-template-columns: repeat(4, 200px);
+    align-items: center;
+    justify-content: center;
+    /* gap: 12px; */
+    border-radius: 12px;
+}
+
+.profile-page-user-stats-data-row-2 > div {
+    /* padding: 45px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* gap: 12px; */
+    border-radius: 12px;
+}
+
+.profile-page-user-stats-data-row-2 > div > div:first-child {
+    font-weight: 600;
+    font-size: 0.8em;
+    padding-bottom: 10px;
+    word-spacing: 3px;
+}
+
+.profile-page-user-stats-data-row-2 > div > div:last-child {
     font-weight: 200;
     font-size: 1.6em;
     opacity: 0.6;
@@ -155,7 +232,8 @@
     margin-bottom: 80px;
 }
 .profile-page-user-upcoming-rides-data, .profile-page-user-past-rides-data, .profile-page-list-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 24px;
 }
 
@@ -237,9 +315,13 @@
     border-radius: 12px;
     margin: 2px;
     min-height: 70px;
+    cursor: pointer;
 }
 
 .profile-page-friend-list-item > .image {
+    padding-top: 8px;
+    padding-left: 15px;
+    padding-bottom: 8px;
     height: 30px;
     width: 30px;
     border-radius: 50%;
@@ -254,18 +336,19 @@
 }
 
 .profile-page-friend-list-item > .name {
-    padding-left: 10px;
+    padding-left: 30px;
     text-align: left;
     font-size: 17px;
 }
 
 .profile-page-friend-list-tab {
     margin: 0px;
-    border: 1px solid var(--dark-color);
+    border: 0.5px solid rgba(209, 215, 221, 1);
     border-radius: 5px 5px 0px 0px;
     padding: 5px 7px;
     background-color: white;
     font-size: 18px;
+    float: left;
 }
 
 .profile-page-friend-list-tab:hover {
@@ -273,8 +356,26 @@
 }
 
 .profile-page-friend-list {
-    border: 1px solid var(--dark-color);
+    border: 0.5px solid rgba(209, 215, 221, 1);
     display: block;
+    width: 100%;
+    float: left;
+    flex-grow: 1;
+}
+
+.profile-page-friend-panel-display {
+    border: 0.5px solid rgba(209, 215, 221, 1);
+    display: block;
+    width: 100%;
+    float: right;
+    flex-grow: 1;
+}
+
+.profile-page-list-panel-display {
+    width: 100%;
+    display: flex;
+    float: left;
+    gap: 24px;
 }
 
 .profile-page-friend-request-button-container {
@@ -282,6 +383,7 @@
     max-width: 100%;
     flex-basis: 0.1;
     margin-left: auto;
+    margin-right: 10px;
     
 }
 
@@ -351,11 +453,119 @@
     cursor: pointer;
 }
 
+/* Based On Profile Modal Style */
 
+.profile-page-panel-name {
+    height: 18px;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    display: inline-block;
+}
 
+.profile-page-panel-name-big {
+    height: 22px;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+}
 
+.profile-page-panel-header {
+    display: block;
+    width: 100%;
+}
 
+.profile-page-panel-content {
+    display: flex;
+    width: 100%;
+    margin: 4px 0px;
+}
 
+.profile-page-panel-name-container {
+    height: 60px;
+    width: 75%;
+    display: block;
+    flex-direction: column;
+    padding: 0px;
+    margin: 20px 2.5% 0px 2.5%;
+    float: right;
+}
+
+.profile-page-panel-image {
+    background-color: var(--primary-color);
+    border-radius: 50%;
+    border: 2px solid var(--dark-color);
+    color: white;
+    width: 15%;
+    aspect-ratio: 1;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0% 0px 5%;
+    padding: 0px;
+    font-size: 48px;
+}
+
+.profile-page-panel-descriptor-left {
+    height: 20px;
+    /*flex-basis: 50%;*/
+    margin: 2px 5px;
+    text-align: center;
+    width: 15%;
+    margin-left: 5%;
+}
+
+.profile-page-panel-descriptor-right {
+    height: 20px;
+    width: 75%;
+    margin: 2px 5px;
+    float: right;
+    text-align: right;
+}
+
+.profile-page-panel-reject-button {
+    border-radius: 10px;
+    border: 2px solid red;
+    color: red;
+    margin: 5px;
+    margin-left: 15%;
+    padding: 0px 10px;
+    text-align: center;
+    font-size: 18px;
+    vertical-align: middle;
+    width: 30%;
+    height: 50px;
+}
+
+.profile-page-panel-accept-button {
+    border-radius: 2%;
+    border: 2px solid green;
+    color: green;
+    margin: 5px;
+    padding: 0px 10px;
+    text-align: center;
+    font-size: 18px;
+    margin-left: 10%;
+    vertical-align: middle;
+    width: 30%;
+    height: 50px;
+}
+
+.profile-page-panel-buttons {
+    width: 100%;
+    position: absolute;
+    bottom: 10px;
+}
+
+.profile-page-panel {
+    display: block;
+    position: relative;
+    /*width: 100%;*/
+    height: 250px;
+
+}
 
 @media only screen and (max-width: 800px) {
 
@@ -378,12 +588,17 @@
 
 
     .profile-page-user-upcoming-rides-data, .profile-page-user-past-rides-data  {
-        flex-direction: column;
+        grid-template-columns: repeat(1, 1fr);
         gap: 24px;
     }
 
     .profile-page-user-rides-hosted, .profile-page-user-rides-joined {
         width: 100%;
     }
-    
+
+    /*
+    .profile-page-friend-panel-display, .profile-page-friend-list {
+        width: 100%;
+    }
+    */
 }
