--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -241,6 +241,9 @@
 }
 
 .profile-page-friend-list-item > .image {
+    padding-top: 8px;
+    padding-left: 15px;
+    padding-bottom: 8px;
     height: 30px;
     width: 30px;
     border-radius: 50%;
@@ -255,7 +258,7 @@
 }
 
 .profile-page-friend-list-item > .name {
-    padding-left: 10px;
+    padding-left: 30px;
     text-align: left;
     font-size: 17px;
 }
@@ -302,6 +305,7 @@
     max-width: 100%;
     flex-basis: 0.1;
     margin-left: auto;
+    margin-right: 10px;
     
 }
 
@@ -444,7 +448,7 @@
 }
 
 .profile-page-panel-reject-button {
-    border-radius: 2%;
+    border-radius: 10px;
     border: 2px solid red;
     color: red;
     margin: 5px;
@@ -481,7 +485,7 @@
     display: block;
     position: relative;
     /*width: 100%;*/
-    height: 600px;
+    height: 250px;
 
 }
 
