--- a/ChainLink-Client/src/styles/components/event-modal.css
+++ b/ChainLink-Client/src/styles/components/event-modal.css
@@ -28,22 +28,9 @@
   z-index: 1001; /* Ensure the content is on top of the overlay */
 }
 
-.rode-card-close-modal {
-  position: absolute;
-  top: 6px;
-  right: 6px;
-  height: 40px;
-  width: 40px;
+.ride-card-close-modal {
+  background: white;
   border-radius: 50%;
-  background-color: white;
-  font-size: 1.4em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1002;
-}
-
-.rode-card-close-modal:hover {
+  position: right;
   cursor: pointer;
-  color: rgba(0, 0, 0, 0.381);
 }
