--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -94,10 +94,6 @@
     padding-left: 5px;
 }
 
-
-
-
-
 .profile-page-user-stats {
     margin-top: 24px;
     background-color: white;
@@ -109,14 +105,24 @@
 .profile-page-user-stats-data {
     padding: 24px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 12px;
-    
     flex-grow: 1;
 }
-.profile-page-user-stats-data > div {
-    
+
+.profile-page-user-stats-data-row-1 {
     padding: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    border-radius: 12px;
+    /* background-color: #e4e4e4; */
+}
+
+.profile-page-user-stats-data-row-1 > div {
+    
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -124,11 +130,44 @@
     gap: 12px;
     border-radius: 12px;
 }
-.profile-page-user-stats-data > div > div:first-child {
+
+.profile-page-user-stats-data-row-1 > div > div:first-child {
     font-weight: 600;
     font-size: 0.8em;
 }
-.profile-page-user-stats-data > div > div:last-child {
+
+.profile-page-user-stats-data-row-1 > div > div:last-child {
+    font-weight: 200;
+    font-size: 1.6em;
+    opacity: 0.6;
+}
+
+.profile-page-user-stats-data-row-2 {
+    padding: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    border-radius: 12px;
+}
+
+.profile-page-user-stats-data-row-2 > div {
+    padding: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    border-radius: 12px;
+}
+
+.profile-page-user-stats-data-row-2 > div > div:first-child {
+    font-weight: 600;
+    font-size: 0.8em;
+}
+
+.profile-page-user-stats-data-row-2 > div > div:last-child {
     font-weight: 200;
     font-size: 1.6em;
     opacity: 0.6;
