Changed divider between rows 1 and 2 to match divider between profile information and further information

--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -136,9 +136,9 @@
 
 .profile-page-user-stats-data > hr {
     border: none;
-    height: 1.5px;
+    height: .5px;
     width: 90%;
-    background-color:rgba(0, 0, 0, 0.2);
+    background-color:rgba(0, 0, 0, 0.4);
     margin-top: 40px;
 }
 
