Cleaned up share ride modal. Close is now FA icon, added spacing to various elements and borders around users.

--- a/ChainLink-Client/src/styles/components/share-ride.css
+++ b/ChainLink-Client/src/styles/components/share-ride.css
@@ -18,15 +18,24 @@
   border-radius: 8px;
   text-align: center;
   z-index: 1001; /* Ensure the content is on top of the overlay */
+  width: 400px;
 }
 
 .close-modal {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 3px;
+  right: 9px;
   cursor: pointer;
   font-size: 20px;
   font-weight: bold;
+}
+
+.close-modal:hover {
+  color: red !important;
+}
+
+.share-ride-icon {
+  margin-left: 5px;
 }
 
 .friend-select {
