--- a/ChainLink-Client/src/styles/components/friend-select.css
+++ b/ChainLink-Client/src/styles/components/friend-select.css
@@ -15,11 +15,26 @@
   margin: 5px 0;
 }
 
+.friend-select > .select-all {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin: 8px;
+}
+
+.friend-select > .select-all input {
+  margin-right: 10px;
+}
+
 .friend-select label {
   cursor: pointer;
   display: flex;
   align-items: center;
   width: 100%;
+  border: 1px solid var(--dark-color);
+  border-radius: 10px;
+  padding: 8px;
 }
 
 .friend-select label input {
@@ -28,4 +43,6 @@
 
 .friend-select label .user-avatar {
   margin-right: 10px; /* Add space between the avatar and the name */
+  /* width: 40px;
+  height: 40px; */
 }
