--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -24,11 +24,11 @@
 .profile-page-user-info::after {
     content: '';
     position: absolute;
-    width: 80%;
+    width: 100%;
     height: 0.5px;
     background-color: rgba(0, 0, 0, 0.342);
     bottom: -40px;
-    left: 10%;
+    /* left: 10%; */
 }
 
 .profile-page-user-info .user-image img,
