--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -24,11 +24,11 @@
 .profile-page-user-info::after {
     content: '';
     position: absolute;
-    width: 80%;
+    width: 100%;
     height: 0.5px;
     background-color: rgba(0, 0, 0, 0.342);
     bottom: -40px;
-    left: 10%;
+    /* left: 10%; */
 }
 
 .profile-page-user-info .user-image img,
@@ -94,10 +94,6 @@
     padding-left: 5px;
 }
 
-
-
-
-
 .profile-page-user-stats {
     margin-top: 24px;
     background-color: white;
@@ -106,29 +102,110 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
+.profile-page-tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.profile-page-tooltip .tooltip-text {
+    visibility: hidden;
+    width: 200px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 120%;
+    left: 50%;
+    margin-left: -100px;
+}
+
+.profile-page-tooltip:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
 .profile-page-user-stats-data {
     padding: 24px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 12px;
-    
     flex-grow: 1;
 }
-.profile-page-user-stats-data > div {
-    
+
+.profile-page-user-stats-data > hr {
+    border: none;
+    height: .5px;
+    width: 90%;
+    background-color:rgba(0, 0, 0, 0.4);
+    margin-top: 40px;
+}
+
+.profile-page-user-stats-data-row-1 {
     padding: 12px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    /* gap: 12px; */
+    border-radius: 12px;
+    /* background-color: #e4e4e4; */
+}
+
+.profile-page-user-stats-data-row-1 > div {
+    
+    /* padding: 50px; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 12px;
+    /* gap: 12px; */
     border-radius: 12px;
 }
-.profile-page-user-stats-data > div > div:first-child {
+
+.profile-page-user-stats-data-row-1 > div > div:first-child {
     font-weight: 600;
     font-size: 0.8em;
+    padding-bottom: 10px;
+    word-spacing: 3px;
 }
-.profile-page-user-stats-data > div > div:last-child {
+
+.profile-page-user-stats-data-row-1 > div > div:last-child {
+    font-weight: 200;
+    font-size: 1.6em;
+    opacity: 0.6;
+}
+
+.profile-page-user-stats-data-row-2 {
+    padding: 12px;
+    display: grid;
+    grid-template-columns: repeat(4, 200px);
+    align-items: center;
+    justify-content: center;
+    /* gap: 12px; */
+    border-radius: 12px;
+}
+
+.profile-page-user-stats-data-row-2 > div {
+    /* padding: 45px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* gap: 12px; */
+    border-radius: 12px;
+}
+
+.profile-page-user-stats-data-row-2 > div > div:first-child {
+    font-weight: 600;
+    font-size: 0.8em;
+    padding-bottom: 10px;
+    word-spacing: 3px;
+}
+
+.profile-page-user-stats-data-row-2 > div > div:last-child {
     font-weight: 200;
     font-size: 1.6em;
     opacity: 0.6;
