Club Tabs/Create Clubs Page

--- a/ChainLink-Client/src/styles/components/friend-list.css
+++ b/ChainLink-Client/src/styles/components/friend-list.css
@@ -6,10 +6,10 @@
   width: 100%;
 }
 
-.profile-page-tabs {
+.profile-page-friends-tabs {
   display: flex;
   justify-content: left;
-  width: 75%;
+  width: 100%;
   gap: 3px;
 }
 
