--- a/ChainLink-Client/src/styles/components/club-list.css
+++ b/ChainLink-Client/src/styles/components/club-list.css
@@ -8,6 +8,7 @@
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  align-self: flex-start;
 }
 
 .create-club-button:hover {
