Adjusted passwordresetinitiated styling

--- a/ChainLink-Client/src/styles/PasswordResetInitiated.css
+++ b/ChainLink-Client/src/styles/PasswordResetInitiated.css
@@ -39,3 +39,16 @@
     background-color: #218838;
   }
   
+  @media (max-width: 480px) {
+    .modal-content {
+      padding: 16px;
+      max-width: 90vw;
+    }
+  
+    .modal-close-btn {
+      padding: 10px;
+      font-size: 14px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+  }
