--- a/ChainLink-Client/src/styles/components/button.css
+++ b/ChainLink-Client/src/styles/components/button.css
@@ -12,6 +12,8 @@
 
 .button:hover {
   cursor: pointer;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .button-primary {
