--- a/ChainLink-Client/src/styles/components/friend-request.css
+++ b/ChainLink-Client/src/styles/components/friend-request.css
@@ -1,11 +1,27 @@
 /* friend-request.css */
 .friend-request-container {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  width: 50%;
-  padding-left: 10px;
+   min-height: calc(100vh - 80px);
+  max-height: calc(100vh - 80px);
+  overflow-y: auto;
+  padding: 24px;
 }
+
+.friend-request-form-container {
+  background-color: white;
+  height: 80vh;
+  min-width: 200px;
+  max-width: 500px;
+  margin: auto;
+  padding: 24px;
+  border-radius: 12px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border: 0.5px solid rgba(100, 100, 111, 0.2);
+}
+
+.friend-request-form-container > h2 {
+  margin-bottom: 1rem;
+}
+
 
 .friend-request-input {
   padding: 10px;
@@ -14,6 +30,7 @@
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-size: 14px;
   flex-grow: 1;
+  width: 100%;
 }
 
 .friend-request-button {
@@ -26,6 +43,7 @@
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  width: 9rem;
 }
 
 .friend-request-button:hover {
@@ -35,4 +53,30 @@
 .friend-request-button:active {
   background-color: var(--primary-color-active);
   transform: scale(0.98);
+}
+
+.friend-request-card-button-container{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  padding-top: 1rem;
+}
+
+.friend-request-button.remove{
+  background-color: var(--error-color);
+}
+
+.friend-request-button.remove:hover{
+  background-color: var(--error-color-light);
+}
+
+.friend-request-button.pending{
+  background-color: var(--warning-color);
+}
+
+.friend-request-button.friend-request-button.pending:hover{
+  background-color: #ffca2c;
 }
